--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial;
+  font-family: Helvetica;
   font-size: 60px;
-  background-color: silver
+  background-image: linear-gradient(Gold, White)
 }
