--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: Arial;
   font-size: 60px;
+  padding: 0px;
+  margin: 0px;
   background-image: linear-gradient(Gold, White)
 }
