--- a/style.css
+++ b/style.css
@@ -5,3 +5,15 @@ body {
   margin: 0px;
   background-image: linear-gradient(Gold, White)
 }
+
+#topbar button {
+  font-size: 45px
+}
+
+#topbar button:hover {
+  background-color: White
+}
+
+#topbar button:active {
+  background-color: Silver
+}
