--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 60px;
   padding: 0px;
   margin: 0px;
-  background-image: linear-gradient(Gold, White)
+  background-image: linear-gradient(Beige, White)
 }
 
 #topbar a {
