--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   padding: 0px;
   margin: 0px;
   background-image: url("https://img.freepik.com/free-photo/abstract-digital-grid-black-background_53876-97647.jpg");
-  background-image-cover: cover
+  background-size: cover;
 }
 
 #topbar a {
