--- a/style.css
+++ b/style.css
@@ -1,23 +1,13 @@
 body {
   font-family: Arial;
   font-size: 60px;
+  color: white;
   padding: 0px;
   margin: 0px;
-  background-image: url("https://img.freepik.com/free-photo/abstract-digital-grid-black-background_53876-97647.jpg");
+  background-image: url("https://img.freepik.com/free-photo/man-walking-precipice_1134-331.jpg");
   background-size: cover;
 }
 
-#topbar a {
-  float: right;
-  font-size: 45px;
-  background-color: Silver;
-  border-radius: 15px
-}
-
-#topbar a:hover {
-  background-color: White
-}
-
-#topbar a:active {
-  background-color: Silver
+#headers {
+  text-align: center;
 }
