--- a/style.css
+++ b/style.css
@@ -2,12 +2,20 @@ body {
   font-family: Arial;
   font-size: 60px;
   color: white;
-  padding: 0px;
-  margin: 0px;
+  padding: 0px auto;
+  margin: 0px auto;
   background-image: url("https://img.freepik.com/free-photo/man-walking-precipice_1134-331.jpg");
   background-size: cover;
 }
 
-#headers {
+h1 {
   text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
 }
