--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body {
   background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: center
+  justify-content: center;
+  align-items: center;
+  text-align: center
 }
 
 a {
