--- a/drawingpage.css
+++ b/drawingpage.css
@@ -1,1 +1,40 @@
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    background-color: gray;
+}
 
+canvas {
+    border: 3px solid;
+    background-color: white;
+}
+
+#settings {
+    font-size: 40px;
+    text-align: center;
+}
+
+#settings label {
+    font-size: 35px;
+}
+
+#settings #increment {
+    font-size: 30px;
+}
+
+#settings #decrement {
+    font-size: 30px;
+}
+
+#settings #clear {
+    font-size: 50px;
+}
+
+#settings button:hover {
+    background-color: black;
+    color: white
+}
+
+#settings button:active {
+    background-color: silver;
+}
