--- a/musicpagestyle.css
+++ b/musicpagestyle.css
@@ -1,32 +1,177 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    padding: 0px auto;
-    margin: 0px auto;
-    border: 5px solid black;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 25px;
+  text-align: center;
+  color: white;
+  padding: 0px;
+  margin: 0px;
+  background-image: linear-gradient(gray, white);
+  overflow-x: hidden;
 }
 
-#daw {
-    z-index: 1;
+h1 {
+  font-size: 30px;
+  background-color: black;
+  box-shadow: 10px;
+  text-shadow: 35px;
 }
 
-.clefs {
-    margin-top: 105px;
-    position: absolute;
+#numberline {
+  background-color: black;
+  font-size: 47px;
 }
 
-.notes {
-    position: absolute;
+#visualizer {
+  background-color: midnightblue;
+  border: 1px solid black;
+  width: 100vw;
+  height: 100vh;
 }
 
-.line {
-    position: absolute;
+#line {
+  position: absolute;
+  background-color: black;
+  width: 1vw;
+  height: 100vh;
 }
 
-.clefSelection {
-    font-size: 20px;
+#studio {
+  background-color: darkolivegreen
 }
 
-.noteSelection {
-    font-size: 15px;
+.track {
+  position: absolute;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: cadetblue;
+  color: white;
+  font-size: 35px;
+  border: 0px;
+}
+
+.track:hover {
+  background-color: black;
+}
+
+.track:active {
+  background-color: white;
+  color: black;
+}
+
+#play {
+  background-color: green;
+  color: white;
+  border: 0px;
+  font-size: 30px;
+}
+
+#play:hover {
+  background-color: darkgreen;
+}
+
+#play:active {
+  background-color: chartreuse;
+}
+
+#stop {
+  background-color: firebrick;
+  color: white;
+  border: 0px;
+  font-size: 30px;
+}
+
+#stop:hover {
+  background-color: darkred;
+}
+
+#stop:active {
+  background-color: red;
+}
+
+#keepvisonscreen {
+  background-color: darkorange;
+  color: white;
+  border: 0px;
+  font-size: 30px;
+}
+
+#keepvisonscreen:hover {
+  background-color: orangered;
+}
+
+#keepvisonscreen:active {
+  background-color: orange;
+}
+
+#restart {
+  background-color: goldenrod;
+  color: white;
+  border: 0px;
+  font-size: 30px
+}
+
+#restart:hover {
+  background-color: peru;
+}
+
+#restart:active {
+  background-color: gold;
+}
+
+.instrument {
+  background-color: black;
+  color: white;
+  border: 0px;
+  font-size: 30px;
+}
+
+.instrument:hover {
+  background-color: white;
+  color: black;
+}
+
+.instrument:active {
+  background-color: cornsilk;
+  color: gray;
+}
+
+#station {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: gray;
+}
+
+.key {
+  font-size: 30px;
+  height: 100px;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+.key:hover {
+  background-color: cornsilk;
+}
+
+.key:active {
+  background-color: gray;
+  color: white;
+}
+
+.sharpkey {
+  font-size: 30px;
+  height: 100px;
+  background-color: black;
+  color: white;
+  border: 0px;
+}
+
+.sharpkey:hover {
+  background-color: cornsilk;
+  color: black;
+}
+
+.sharpkey:active {
+  background-color: gray;
+  color: white;
 }
